--- a/Code/Evaluation/Model_Performance_Table.ipynb
+++ b/Code/Evaluation/Model_Performance_Table.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 1, 'class_weight': None, 'l1_ratio': 1.0, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "{'C': 0.1, 'class_weight': 'balanced', 'l1_ratio': 1.0, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
       "{'C': 0.1, 'class_weight': None, 'l1_ratio': 0.5, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
       "{'C': 0.01, 'class_weight': 'balanced', 'l1_ratio': 0.25, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
       "{'C': 1.0, 'degree': 2, 'gamma': 0.1, 'kernel': 'rbf'}\n",
@@ -98,9 +98,9 @@
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
        "      <td>All_Data</td>\n",
-       "      <td>C: 1, class_weight: None, l1_ratio: 1.0, multi...</td>\n",
-       "      <td>0.816667</td>\n",
-       "      <td>0.700000</td>\n",
+       "      <td>C: 0.1, class_weight: balanced, l1_ratio: 1.0,...</td>\n",
+       "      <td>0.984175</td>\n",
+       "      <td>0.915708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -183,7 +183,7 @@
        "0              XGBoost  Individual_Features_PCA   \n",
        "\n",
        "                               Tuned Hyperparameters  Train Accuracy  \\\n",
-       "0  C: 1, class_weight: None, l1_ratio: 1.0, multi...        0.816667   \n",
+       "0  C: 0.1, class_weight: balanced, l1_ratio: 1.0,...        0.984175   \n",
        "0  C: 0.1, class_weight: None, l1_ratio: 0.5, mul...        0.992171   \n",
        "0  C: 0.01, class_weight: balanced, l1_ratio: 0.2...        0.958021   \n",
        "0         C: 1.0, degree: 2, gamma: 0.1, kernel: rbf        0.633333   \n",
@@ -194,7 +194,7 @@
        "0  colsample_bytree: 0.8, learning_rate: 0.3, max...        1.000000   \n",
        "\n",
        "   Mean Cross-Validated Accuracy  \n",
-       "0                       0.700000  \n",
+       "0                       0.915708  \n",
        "0                       0.904881  \n",
        "0                       0.915876  \n",
        "0                       0.483333  \n",
@@ -294,35 +294,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
+       "      <td>All_Data</td>\n",
+       "      <td>0.910678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Logistic Regression</td>\n",
        "      <td>All_Features_PCA</td>\n",
        "      <td>0.890531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>Logistic Regression</td>\n",
        "      <td>Individual_Features_PCA</td>\n",
        "      <td>0.909335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>SVM</td>\n",
        "      <td>All_Features_PCA</td>\n",
        "      <td>0.574211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>SVM</td>\n",
        "      <td>Individual_Features_PCA</td>\n",
        "      <td>0.631296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>XGBoost</td>\n",
        "      <td>All_Features_PCA</td>\n",
        "      <td>0.862995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>XGBoost</td>\n",
        "      <td>Individual_Features_PCA</td>\n",
        "      <td>0.881128</td>\n",
@@ -333,12 +339,13 @@
       ],
       "text/plain": [
        "                 Model                 Run Type  Test Accuracy\n",
-       "0  Logistic Regression         All_Features_PCA       0.890531\n",
-       "1  Logistic Regression  Individual_Features_PCA       0.909335\n",
-       "2                  SVM         All_Features_PCA       0.574211\n",
-       "3                  SVM  Individual_Features_PCA       0.631296\n",
-       "4              XGBoost         All_Features_PCA       0.862995\n",
-       "5              XGBoost  Individual_Features_PCA       0.881128"
+       "0  Logistic Regression                 All_Data       0.910678\n",
+       "1  Logistic Regression         All_Features_PCA       0.890531\n",
+       "2  Logistic Regression  Individual_Features_PCA       0.909335\n",
+       "3                  SVM         All_Features_PCA       0.574211\n",
+       "4                  SVM  Individual_Features_PCA       0.631296\n",
+       "5              XGBoost         All_Features_PCA       0.862995\n",
+       "6              XGBoost  Individual_Features_PCA       0.881128"
       ]
      },
      "execution_count": 4,
@@ -397,78 +404,86 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_828a5 th {\n",
+       "#T_de641 th {\n",
        "  text-align: center;\n",
        "}\n",
-       "#T_828a5_row0_col0, #T_828a5_row0_col1, #T_828a5_row0_col2, #T_828a5_row0_col3, #T_828a5_row0_col4, #T_828a5_row0_col5, #T_828a5_row1_col0, #T_828a5_row1_col1, #T_828a5_row1_col2, #T_828a5_row1_col3, #T_828a5_row1_col4, #T_828a5_row1_col5, #T_828a5_row2_col0, #T_828a5_row2_col1, #T_828a5_row2_col2, #T_828a5_row2_col3, #T_828a5_row2_col4, #T_828a5_row2_col5, #T_828a5_row3_col0, #T_828a5_row3_col1, #T_828a5_row3_col2, #T_828a5_row3_col3, #T_828a5_row3_col4, #T_828a5_row3_col5, #T_828a5_row4_col0, #T_828a5_row4_col1, #T_828a5_row4_col2, #T_828a5_row4_col3, #T_828a5_row4_col4, #T_828a5_row4_col5, #T_828a5_row5_col0, #T_828a5_row5_col1, #T_828a5_row5_col2, #T_828a5_row5_col3, #T_828a5_row5_col4, #T_828a5_row5_col5 {\n",
+       "#T_de641_row0_col0, #T_de641_row0_col1, #T_de641_row0_col2, #T_de641_row0_col3, #T_de641_row0_col4, #T_de641_row0_col5, #T_de641_row1_col0, #T_de641_row1_col1, #T_de641_row1_col2, #T_de641_row1_col3, #T_de641_row1_col4, #T_de641_row1_col5, #T_de641_row2_col0, #T_de641_row2_col1, #T_de641_row2_col2, #T_de641_row2_col3, #T_de641_row2_col4, #T_de641_row2_col5, #T_de641_row3_col0, #T_de641_row3_col1, #T_de641_row3_col2, #T_de641_row3_col3, #T_de641_row3_col4, #T_de641_row3_col5, #T_de641_row4_col0, #T_de641_row4_col1, #T_de641_row4_col2, #T_de641_row4_col3, #T_de641_row4_col4, #T_de641_row4_col5, #T_de641_row5_col0, #T_de641_row5_col1, #T_de641_row5_col2, #T_de641_row5_col3, #T_de641_row5_col4, #T_de641_row5_col5, #T_de641_row6_col0, #T_de641_row6_col1, #T_de641_row6_col2, #T_de641_row6_col3, #T_de641_row6_col4, #T_de641_row6_col5 {\n",
        "  text-align: center;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_828a5\">\n",
+       "<table id=\"T_de641\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_828a5_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
-       "      <th id=\"T_828a5_level0_col1\" class=\"col_heading level0 col1\" >Features</th>\n",
-       "      <th id=\"T_828a5_level0_col2\" class=\"col_heading level0 col2\" >Tuned Hyperparameters</th>\n",
-       "      <th id=\"T_828a5_level0_col3\" class=\"col_heading level0 col3\" >Train Accuracy</th>\n",
-       "      <th id=\"T_828a5_level0_col4\" class=\"col_heading level0 col4\" >Mean Cross-Validated Accuracy</th>\n",
-       "      <th id=\"T_828a5_level0_col5\" class=\"col_heading level0 col5\" >Test Accuracy</th>\n",
+       "      <th id=\"T_de641_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
+       "      <th id=\"T_de641_level0_col1\" class=\"col_heading level0 col1\" >Features</th>\n",
+       "      <th id=\"T_de641_level0_col2\" class=\"col_heading level0 col2\" >Tuned Hyperparameters</th>\n",
+       "      <th id=\"T_de641_level0_col3\" class=\"col_heading level0 col3\" >Train Accuracy</th>\n",
+       "      <th id=\"T_de641_level0_col4\" class=\"col_heading level0 col4\" >Mean Cross-Validated Accuracy</th>\n",
+       "      <th id=\"T_de641_level0_col5\" class=\"col_heading level0 col5\" >Test Accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_828a5_row0_col1\" class=\"data row0 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_828a5_row0_col2\" class=\"data row0 col2\" >C: 0.1, class_weight: None, l1_ratio: 0.5, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
-       "      <td id=\"T_828a5_row0_col3\" class=\"data row0 col3\" >0.992171</td>\n",
-       "      <td id=\"T_828a5_row0_col4\" class=\"data row0 col4\" >0.904881</td>\n",
-       "      <td id=\"T_828a5_row0_col5\" class=\"data row0 col5\" >0.890531</td>\n",
+       "      <td id=\"T_de641_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_de641_row0_col1\" class=\"data row0 col1\" >All Data</td>\n",
+       "      <td id=\"T_de641_row0_col2\" class=\"data row0 col2\" >C: 0.1, class_weight: balanced, l1_ratio: 1.0, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_de641_row0_col3\" class=\"data row0 col3\" >0.984175</td>\n",
+       "      <td id=\"T_de641_row0_col4\" class=\"data row0 col4\" >0.915708</td>\n",
+       "      <td id=\"T_de641_row0_col5\" class=\"data row0 col5\" >0.910678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_828a5_row1_col1\" class=\"data row1 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_828a5_row1_col2\" class=\"data row1 col2\" >C: 0.01, class_weight: balanced, l1_ratio: 0.25, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
-       "      <td id=\"T_828a5_row1_col3\" class=\"data row1 col3\" >0.958021</td>\n",
-       "      <td id=\"T_828a5_row1_col4\" class=\"data row1 col4\" >0.915876</td>\n",
-       "      <td id=\"T_828a5_row1_col5\" class=\"data row1 col5\" >0.909335</td>\n",
+       "      <td id=\"T_de641_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_de641_row1_col1\" class=\"data row1 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_de641_row1_col2\" class=\"data row1 col2\" >C: 0.1, class_weight: None, l1_ratio: 0.5, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_de641_row1_col3\" class=\"data row1 col3\" >0.992171</td>\n",
+       "      <td id=\"T_de641_row1_col4\" class=\"data row1 col4\" >0.904881</td>\n",
+       "      <td id=\"T_de641_row1_col5\" class=\"data row1 col5\" >0.890531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row2_col0\" class=\"data row2 col0\" >SVM</td>\n",
-       "      <td id=\"T_828a5_row2_col1\" class=\"data row2 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_828a5_row2_col2\" class=\"data row2 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
-       "      <td id=\"T_828a5_row2_col3\" class=\"data row2 col3\" >1.000000</td>\n",
-       "      <td id=\"T_828a5_row2_col4\" class=\"data row2 col4\" >0.503248</td>\n",
-       "      <td id=\"T_828a5_row2_col5\" class=\"data row2 col5\" >0.574211</td>\n",
+       "      <td id=\"T_de641_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_de641_row2_col1\" class=\"data row2 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_de641_row2_col2\" class=\"data row2 col2\" >C: 0.01, class_weight: balanced, l1_ratio: 0.25, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_de641_row2_col3\" class=\"data row2 col3\" >0.958021</td>\n",
+       "      <td id=\"T_de641_row2_col4\" class=\"data row2 col4\" >0.915876</td>\n",
+       "      <td id=\"T_de641_row2_col5\" class=\"data row2 col5\" >0.909335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row3_col0\" class=\"data row3 col0\" >SVM</td>\n",
-       "      <td id=\"T_828a5_row3_col1\" class=\"data row3 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_828a5_row3_col2\" class=\"data row3 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
-       "      <td id=\"T_828a5_row3_col3\" class=\"data row3 col3\" >1.000000</td>\n",
-       "      <td id=\"T_828a5_row3_col4\" class=\"data row3 col4\" >0.579708</td>\n",
-       "      <td id=\"T_828a5_row3_col5\" class=\"data row3 col5\" >0.631296</td>\n",
+       "      <td id=\"T_de641_row3_col0\" class=\"data row3 col0\" >SVM</td>\n",
+       "      <td id=\"T_de641_row3_col1\" class=\"data row3 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_de641_row3_col2\" class=\"data row3 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
+       "      <td id=\"T_de641_row3_col3\" class=\"data row3 col3\" >1.000000</td>\n",
+       "      <td id=\"T_de641_row3_col4\" class=\"data row3 col4\" >0.503248</td>\n",
+       "      <td id=\"T_de641_row3_col5\" class=\"data row3 col5\" >0.574211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row4_col0\" class=\"data row4 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_828a5_row4_col1\" class=\"data row4 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_828a5_row4_col2\" class=\"data row4 col2\" >colsample_bytree: 1, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
-       "      <td id=\"T_828a5_row4_col3\" class=\"data row4 col3\" >1.000000</td>\n",
-       "      <td id=\"T_828a5_row4_col4\" class=\"data row4 col4\" >0.855573</td>\n",
-       "      <td id=\"T_828a5_row4_col5\" class=\"data row4 col5\" >0.862995</td>\n",
+       "      <td id=\"T_de641_row4_col0\" class=\"data row4 col0\" >SVM</td>\n",
+       "      <td id=\"T_de641_row4_col1\" class=\"data row4 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_de641_row4_col2\" class=\"data row4 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
+       "      <td id=\"T_de641_row4_col3\" class=\"data row4 col3\" >1.000000</td>\n",
+       "      <td id=\"T_de641_row4_col4\" class=\"data row4 col4\" >0.579708</td>\n",
+       "      <td id=\"T_de641_row4_col5\" class=\"data row4 col5\" >0.631296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_828a5_row5_col0\" class=\"data row5 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_828a5_row5_col1\" class=\"data row5 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_828a5_row5_col2\" class=\"data row5 col2\" >colsample_bytree: 0.8, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
-       "      <td id=\"T_828a5_row5_col3\" class=\"data row5 col3\" >1.000000</td>\n",
-       "      <td id=\"T_828a5_row5_col4\" class=\"data row5 col4\" >0.888056</td>\n",
-       "      <td id=\"T_828a5_row5_col5\" class=\"data row5 col5\" >0.881128</td>\n",
+       "      <td id=\"T_de641_row5_col0\" class=\"data row5 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_de641_row5_col1\" class=\"data row5 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_de641_row5_col2\" class=\"data row5 col2\" >colsample_bytree: 1, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
+       "      <td id=\"T_de641_row5_col3\" class=\"data row5 col3\" >1.000000</td>\n",
+       "      <td id=\"T_de641_row5_col4\" class=\"data row5 col4\" >0.855573</td>\n",
+       "      <td id=\"T_de641_row5_col5\" class=\"data row5 col5\" >0.862995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_de641_row6_col0\" class=\"data row6 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_de641_row6_col1\" class=\"data row6 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_de641_row6_col2\" class=\"data row6 col2\" >colsample_bytree: 0.8, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
+       "      <td id=\"T_de641_row6_col3\" class=\"data row6 col3\" >1.000000</td>\n",
+       "      <td id=\"T_de641_row6_col4\" class=\"data row6 col4\" >0.888056</td>\n",
+       "      <td id=\"T_de641_row6_col5\" class=\"data row6 col5\" >0.881128</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x24ada5a7aa0>"
+       "<pandas.io.formats.style.Styler at 0x1d53cce91f0>"
       ]
      },
      "execution_count": 5,
