--- a/Code/Evaluation/Model_Performance_Table.ipynb
+++ b/Code/Evaluation/Model_Performance_Table.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "0                       0.888056  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "6              XGBoost  Individual_Features_PCA       0.881128"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,96 +397,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_de641 th {\n",
+       "#T_53658 th {\n",
        "  text-align: center;\n",
        "}\n",
-       "#T_de641_row0_col0, #T_de641_row0_col1, #T_de641_row0_col2, #T_de641_row0_col3, #T_de641_row0_col4, #T_de641_row0_col5, #T_de641_row1_col0, #T_de641_row1_col1, #T_de641_row1_col2, #T_de641_row1_col3, #T_de641_row1_col4, #T_de641_row1_col5, #T_de641_row2_col0, #T_de641_row2_col1, #T_de641_row2_col2, #T_de641_row2_col3, #T_de641_row2_col4, #T_de641_row2_col5, #T_de641_row3_col0, #T_de641_row3_col1, #T_de641_row3_col2, #T_de641_row3_col3, #T_de641_row3_col4, #T_de641_row3_col5, #T_de641_row4_col0, #T_de641_row4_col1, #T_de641_row4_col2, #T_de641_row4_col3, #T_de641_row4_col4, #T_de641_row4_col5, #T_de641_row5_col0, #T_de641_row5_col1, #T_de641_row5_col2, #T_de641_row5_col3, #T_de641_row5_col4, #T_de641_row5_col5, #T_de641_row6_col0, #T_de641_row6_col1, #T_de641_row6_col2, #T_de641_row6_col3, #T_de641_row6_col4, #T_de641_row6_col5 {\n",
+       "#T_53658_row0_col0, #T_53658_row0_col1, #T_53658_row0_col2, #T_53658_row0_col3, #T_53658_row0_col4, #T_53658_row0_col5, #T_53658_row1_col0, #T_53658_row1_col1, #T_53658_row1_col2, #T_53658_row1_col3, #T_53658_row1_col4, #T_53658_row1_col5, #T_53658_row2_col0, #T_53658_row2_col1, #T_53658_row2_col2, #T_53658_row2_col3, #T_53658_row2_col4, #T_53658_row2_col5, #T_53658_row3_col0, #T_53658_row3_col1, #T_53658_row3_col2, #T_53658_row3_col3, #T_53658_row3_col4, #T_53658_row3_col5, #T_53658_row4_col0, #T_53658_row4_col1, #T_53658_row4_col2, #T_53658_row4_col3, #T_53658_row4_col4, #T_53658_row4_col5, #T_53658_row5_col0, #T_53658_row5_col1, #T_53658_row5_col2, #T_53658_row5_col3, #T_53658_row5_col4, #T_53658_row5_col5, #T_53658_row6_col0, #T_53658_row6_col1, #T_53658_row6_col2, #T_53658_row6_col3, #T_53658_row6_col4, #T_53658_row6_col5 {\n",
        "  text-align: center;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_de641\">\n",
+       "<table id=\"T_53658\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_de641_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
-       "      <th id=\"T_de641_level0_col1\" class=\"col_heading level0 col1\" >Features</th>\n",
-       "      <th id=\"T_de641_level0_col2\" class=\"col_heading level0 col2\" >Tuned Hyperparameters</th>\n",
-       "      <th id=\"T_de641_level0_col3\" class=\"col_heading level0 col3\" >Train Accuracy</th>\n",
-       "      <th id=\"T_de641_level0_col4\" class=\"col_heading level0 col4\" >Mean Cross-Validated Accuracy</th>\n",
-       "      <th id=\"T_de641_level0_col5\" class=\"col_heading level0 col5\" >Test Accuracy</th>\n",
+       "      <th id=\"T_53658_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
+       "      <th id=\"T_53658_level0_col1\" class=\"col_heading level0 col1\" >Features</th>\n",
+       "      <th id=\"T_53658_level0_col2\" class=\"col_heading level0 col2\" >Tuned Hyperparameters</th>\n",
+       "      <th id=\"T_53658_level0_col3\" class=\"col_heading level0 col3\" >Train Accuracy</th>\n",
+       "      <th id=\"T_53658_level0_col4\" class=\"col_heading level0 col4\" >Mean Cross-Validated Accuracy</th>\n",
+       "      <th id=\"T_53658_level0_col5\" class=\"col_heading level0 col5\" >Test Accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_de641_row0_col1\" class=\"data row0 col1\" >All Data</td>\n",
-       "      <td id=\"T_de641_row0_col2\" class=\"data row0 col2\" >C: 0.1, class_weight: balanced, l1_ratio: 1.0, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
-       "      <td id=\"T_de641_row0_col3\" class=\"data row0 col3\" >0.984175</td>\n",
-       "      <td id=\"T_de641_row0_col4\" class=\"data row0 col4\" >0.915708</td>\n",
-       "      <td id=\"T_de641_row0_col5\" class=\"data row0 col5\" >0.910678</td>\n",
+       "      <td id=\"T_53658_row0_col0\" class=\"data row0 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_53658_row0_col1\" class=\"data row0 col1\" >All Features</td>\n",
+       "      <td id=\"T_53658_row0_col2\" class=\"data row0 col2\" >C: 0.1, class_weight: balanced, l1_ratio: 1.0, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_53658_row0_col3\" class=\"data row0 col3\" >0.984175</td>\n",
+       "      <td id=\"T_53658_row0_col4\" class=\"data row0 col4\" >0.915708</td>\n",
+       "      <td id=\"T_53658_row0_col5\" class=\"data row0 col5\" >0.910678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_de641_row1_col1\" class=\"data row1 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_de641_row1_col2\" class=\"data row1 col2\" >C: 0.1, class_weight: None, l1_ratio: 0.5, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
-       "      <td id=\"T_de641_row1_col3\" class=\"data row1 col3\" >0.992171</td>\n",
-       "      <td id=\"T_de641_row1_col4\" class=\"data row1 col4\" >0.904881</td>\n",
-       "      <td id=\"T_de641_row1_col5\" class=\"data row1 col5\" >0.890531</td>\n",
+       "      <td id=\"T_53658_row1_col0\" class=\"data row1 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_53658_row1_col1\" class=\"data row1 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_53658_row1_col2\" class=\"data row1 col2\" >C: 0.1, class_weight: None, l1_ratio: 0.5, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_53658_row1_col3\" class=\"data row1 col3\" >0.992171</td>\n",
+       "      <td id=\"T_53658_row1_col4\" class=\"data row1 col4\" >0.904881</td>\n",
+       "      <td id=\"T_53658_row1_col5\" class=\"data row1 col5\" >0.890531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
-       "      <td id=\"T_de641_row2_col1\" class=\"data row2 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_de641_row2_col2\" class=\"data row2 col2\" >C: 0.01, class_weight: balanced, l1_ratio: 0.25, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
-       "      <td id=\"T_de641_row2_col3\" class=\"data row2 col3\" >0.958021</td>\n",
-       "      <td id=\"T_de641_row2_col4\" class=\"data row2 col4\" >0.915876</td>\n",
-       "      <td id=\"T_de641_row2_col5\" class=\"data row2 col5\" >0.909335</td>\n",
+       "      <td id=\"T_53658_row2_col0\" class=\"data row2 col0\" >Logistic Regression</td>\n",
+       "      <td id=\"T_53658_row2_col1\" class=\"data row2 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_53658_row2_col2\" class=\"data row2 col2\" >C: 0.01, class_weight: balanced, l1_ratio: 0.25, multi_class: ovr, penalty: elasticnet, solver: saga</td>\n",
+       "      <td id=\"T_53658_row2_col3\" class=\"data row2 col3\" >0.958021</td>\n",
+       "      <td id=\"T_53658_row2_col4\" class=\"data row2 col4\" >0.915876</td>\n",
+       "      <td id=\"T_53658_row2_col5\" class=\"data row2 col5\" >0.909335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row3_col0\" class=\"data row3 col0\" >SVM</td>\n",
-       "      <td id=\"T_de641_row3_col1\" class=\"data row3 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_de641_row3_col2\" class=\"data row3 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
-       "      <td id=\"T_de641_row3_col3\" class=\"data row3 col3\" >1.000000</td>\n",
-       "      <td id=\"T_de641_row3_col4\" class=\"data row3 col4\" >0.503248</td>\n",
-       "      <td id=\"T_de641_row3_col5\" class=\"data row3 col5\" >0.574211</td>\n",
+       "      <td id=\"T_53658_row3_col0\" class=\"data row3 col0\" >SVM</td>\n",
+       "      <td id=\"T_53658_row3_col1\" class=\"data row3 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_53658_row3_col2\" class=\"data row3 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
+       "      <td id=\"T_53658_row3_col3\" class=\"data row3 col3\" >1.000000</td>\n",
+       "      <td id=\"T_53658_row3_col4\" class=\"data row3 col4\" >0.503248</td>\n",
+       "      <td id=\"T_53658_row3_col5\" class=\"data row3 col5\" >0.574211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row4_col0\" class=\"data row4 col0\" >SVM</td>\n",
-       "      <td id=\"T_de641_row4_col1\" class=\"data row4 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_de641_row4_col2\" class=\"data row4 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
-       "      <td id=\"T_de641_row4_col3\" class=\"data row4 col3\" >1.000000</td>\n",
-       "      <td id=\"T_de641_row4_col4\" class=\"data row4 col4\" >0.579708</td>\n",
-       "      <td id=\"T_de641_row4_col5\" class=\"data row4 col5\" >0.631296</td>\n",
+       "      <td id=\"T_53658_row4_col0\" class=\"data row4 col0\" >SVM</td>\n",
+       "      <td id=\"T_53658_row4_col1\" class=\"data row4 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_53658_row4_col2\" class=\"data row4 col2\" >C: 0.1, degree: 2, gamma: 0.1, kernel: poly</td>\n",
+       "      <td id=\"T_53658_row4_col3\" class=\"data row4 col3\" >1.000000</td>\n",
+       "      <td id=\"T_53658_row4_col4\" class=\"data row4 col4\" >0.579708</td>\n",
+       "      <td id=\"T_53658_row4_col5\" class=\"data row4 col5\" >0.631296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row5_col0\" class=\"data row5 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_de641_row5_col1\" class=\"data row5 col1\" >All Features PCA</td>\n",
-       "      <td id=\"T_de641_row5_col2\" class=\"data row5 col2\" >colsample_bytree: 1, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
-       "      <td id=\"T_de641_row5_col3\" class=\"data row5 col3\" >1.000000</td>\n",
-       "      <td id=\"T_de641_row5_col4\" class=\"data row5 col4\" >0.855573</td>\n",
-       "      <td id=\"T_de641_row5_col5\" class=\"data row5 col5\" >0.862995</td>\n",
+       "      <td id=\"T_53658_row5_col0\" class=\"data row5 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_53658_row5_col1\" class=\"data row5 col1\" >All Features PCA</td>\n",
+       "      <td id=\"T_53658_row5_col2\" class=\"data row5 col2\" >colsample_bytree: 1, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
+       "      <td id=\"T_53658_row5_col3\" class=\"data row5 col3\" >1.000000</td>\n",
+       "      <td id=\"T_53658_row5_col4\" class=\"data row5 col4\" >0.855573</td>\n",
+       "      <td id=\"T_53658_row5_col5\" class=\"data row5 col5\" >0.862995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_de641_row6_col0\" class=\"data row6 col0\" >XGBoost</td>\n",
-       "      <td id=\"T_de641_row6_col1\" class=\"data row6 col1\" >Individual Features PCA</td>\n",
-       "      <td id=\"T_de641_row6_col2\" class=\"data row6 col2\" >colsample_bytree: 0.8, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
-       "      <td id=\"T_de641_row6_col3\" class=\"data row6 col3\" >1.000000</td>\n",
-       "      <td id=\"T_de641_row6_col4\" class=\"data row6 col4\" >0.888056</td>\n",
-       "      <td id=\"T_de641_row6_col5\" class=\"data row6 col5\" >0.881128</td>\n",
+       "      <td id=\"T_53658_row6_col0\" class=\"data row6 col0\" >XGBoost</td>\n",
+       "      <td id=\"T_53658_row6_col1\" class=\"data row6 col1\" >Individual Features PCA</td>\n",
+       "      <td id=\"T_53658_row6_col2\" class=\"data row6 col2\" >colsample_bytree: 0.8, learning_rate: 0.3, max_depth: 3, n_estimators: 200, subsample: 0.8</td>\n",
+       "      <td id=\"T_53658_row6_col3\" class=\"data row6 col3\" >1.000000</td>\n",
+       "      <td id=\"T_53658_row6_col4\" class=\"data row6 col4\" >0.888056</td>\n",
+       "      <td id=\"T_53658_row6_col5\" class=\"data row6 col5\" >0.881128</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1d53cce91f0>"
+       "<pandas.io.formats.style.Styler at 0x1d53cf1e630>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,6 +500,8 @@
     "                                        # Reorder to put Run Type second\n",
     "                                        .reindex(columns=['Model', 'Run Type', 'Tuned Hyperparameters', 'Train Accuracy', 'Mean Cross-Validated Accuracy', 'Test Accuracy'])\n",
     "                                        .rename(columns={'Run Type': 'Features'})\n",
+    "                                        # Recode 'All Data' to 'All Features' in Features column\n",
+    "                                        .replace({'Features': {'All Data': 'All Features'}})\n",
     "                                        .style\n",
     "                                        .format(thousands=\",\", decimal=\".\")\n",
     "                                        .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
